--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.3.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "daisyui": "^4.6.2"
   }
 }
